--- a/Calendario.html
+++ b/Calendario.html
@@ -16,19 +16,30 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="logo">Carreras <span>de calle</span></a></div>
+				<a href="#menu">Menú</a>
 
-				<a href="index.html">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="Carrera de calle.html">Carrera de calle</a></li>
+					<li><a href="Carrera de trail.html">Carrera de trail</a></li>
+					<li><a href="Inscripciones.html">Inscripciones</a></li>
+
 				</ul>
 			</nav>
 
 		<!-- One -->
-
+		<section id="One" class="wrapper style3">
+			<div class="inner">
+				<header class="align-center">
+					<p>Fechas tentativas de carreras</p>
+					<marquee><h2>Cronograma anual</h2></marquee>
+				</header>
+			</div>
+		</section>
 
 		<!-- Two -->
 		 	<section id="two" class="wrapper style2">
@@ -43,177 +54,50 @@
 varias de ellas, tienen un fin solidario y al no gastar dinero vienen en auge sumando más adeptos.<br>
 Estos eventos pueden adelantarse o atrasarse una semana, eso va a depender mucho de como caigan las fechas. Como verán, no todas las carreras se realizan los domingos, ya que existen algunas que se realizan los sábados a la tarde o a la noche (muy pocos casos a la mañana) y hay otras que tienen sus fechas fijas e independientemente de que día caiga, se realizan igual. En su mayoría, estas últimas, caen días feriados.<br>
 Prestar atención a la aclaración con la palabra "NOTA". Eso quiere decir que es algo a tener en cuenta o es un algún dato menor o mayor importancia a mencionar.<br>
-A continuación, les voy listar algunas de ellas que se hacen anualmente con la fecha de su última edición, zona, distancias y una breve descripción. Aproximadamente rondan esas fechas, lo cual no quiere decir que estén sujeta a modificaciones.<br>
-Quienes visiten esta página, son bienvenidos de aportar alguna carrera que conozcan que no tomé en cuenta de este listado cuando esté habilitado el foro o por medio de la sección de contacto. Comencemos:</p>
-<u><h3>ENERO</h3></u>
-<p>Puerto Madero: Carrera del borracho. Se realiza en el primer día del año.<br>
-Distancias: 3 y 6 kilómetros (2 vueltas de 3 la de 6).<br>
-NOTA: Es una de las que tienen una fecha fija sin importar el día que caiga</p>
-<u><h3>FEBRERO</h3></u>
-<p>NOTA: por el momento, no hay ninguna carrera gratuita que se haga anualmente de manera ininterrumpida en este mes.</p>
-<u><h3>MARZO</h3></u>
-<p>Ituzaingó: Ituzaingó corre por más derechos y más igualdad. El motivo de esta carrera se debe a que se realiza por el día de la mujer.<br>
-Distancias: 1 kilómetro para chicos - 3 kilómetros participativos - 10 kilómetros competitivos. <br>
-Lugar de largada: Las Heras y Zufriategui (Plaza 20 de febrero, a una cuadra de la estación).<br>
-Fecha de última edición: 8/3/2020<br>
-NOTA 1: En la edición del 2016, la realizaron en abril por problemas de organización.
-NOTA 2: En su última edición del 2020, los recorridos de 3 y 10 kilómetros largaron en distintos horarios.</p>
-<p>Florencio Varela: Maratón Ricardo Castro.<br>
-Distancias: 3 kilómetros participativos y competitivos - 10 kilómetros competitivos<br>
-Fecha de última edición: 16/3/2019 (sábado por la noche).<br>
-Lugar de largada: Eva Perón y Pueyrredón (a pocas cuadras de la estación).<br>
-NOTA: Este año se iba a realizar el 14/3/2020.<br>
-NOTA ESPECIAL: Por motivos del COVID-19, esta carrera quedó suspendida.</p>
-<p></p>
-<p>Núñez: la carrera de Miguel. El motivo de esta carrera es para conmemorar la desaparición del atleta Miguel Sánchez en la dictadura militar.<br>
-Distancias: 3 kilómetros participativos - 10 kilómetros competitivos<br>
-Fecha de última edición: 24/3/2019 <br>
-Lugar de largada: Miguel Sánchez y Padre Canavery.<br>
-NOTA ESPECIAL: Por motivos del COVID-19, esta carrera quedó suspendida.</p>
-<p>Castelar: prueba atlética por la memoria, verdad y justicia. <br>
-Distancias: 5 kilómetros participativos - 10 kilómetros competitivos<br>
-Lugar: Santa María de Oro 3530 (polideportivo Gorki Grana, a 6 cuadras de la estación de Ituzaingó).<br>
-NOTA: Se hace todos los 24 sin importar el día que caiga.<br>
-NOTA ESPECIAL: Por motivos del COVID-19, esta carrera quedó suspendida.</p>
-<u><h3>ABRIL</h3></u>
-<p>Lomas de Zamora: Lomas corre de azul. Una carrera para conmemorar el día mundial sobre la concientización del autismo.<br>
-Distancias: 1 kilómetro para chicos - 3 kilómetros participativos - 5 kilómetros competitivos.<br>
-NOTA: Es otra de las que tiene fechas inamovibles sin importar el día. <br>
-NOTA ESPECIAL: Por motivos del COVID-19, esta carrera quedó suspendida.</p>
-<u><h3>MAYO</h3></u>
-<p>Villa Sarmiento: Maratón Flavia Pugliese. Esta carrera tiene como causa conmemorar el asesinato de Flavia Pugliese, una entrenadora de rugby femenino.<br>
-Distancias: 2 kilómetros participativos - 5 kilómetros competitivos <br>
-Fecha de última edición: 12/5/2020.<br>
-Lugar de largada: Florentino Ameghino y General Gelly y Obes (Plaza Alsina).<br>
-NOTA: Piden donación de alimentos no perecederos el mismo día de la carrera, lo mismo aplica con las inscripciones.</p>
-<u><h3>JUNIO</h3></u>
-<p>Lomas de Zamora: correcaminata por los electrodependientes.<br>
-Distancia: 5 kilómetros (única).<br>
-Fecha de primera y única edición: 1/6/2019 (sábado 1 por la mañana)<br>
-Lugar de largada: Parque municipal de Lomas de Zamora.<br>
-NOTA 1: Fue la primera edición, por lo tanto queda en duda la edición 2021.<br>
-NOTA 2: Pidieron donación de leche larga vida. Se entregó el mismo día de la carrera.</p>
-<p>Berazategui: maratón del vidriero.<br>
-Distancia: 10 kilómetros (única) <br>
-Fecha de última edición: 8/6/2019 sábado por la tarde.<br>
-Lugar de largada: Avenida 14 y calle 144.<br>
-NOTA: Luego de las premiaciones por categorías, realizan importantes sorteos para los participantes.</p>
-<p>Florencio Varela: maratón San Juan Bautista.<br>
-Distancias: 3 kilómetros participativos - 8 kilómetros competitivos.<br>
-Fecha de última edición: 23/6/2019 <br>
-Lugar de largada: Municipalidad de Florencio Varela.<br></p>
-<p>Los Polvorines: Yo corro en Malvinas.<br>
-Distancias: 3 kilómetros participativos - 10 kilómetros competitivos<br>
-Fecha de primera y única edición: 23/06/2019.<br>
-Lugar de largada: Municipalidad de Malvinas Argentinas.<br>
-NOTA 1: Fue la primera edición, por lo tanto queda en duda la edición 2021.<p>
-<u><h3>JULIO</h3></u>
-<p>La Plata: carrera 8k modo FLAP (Festival La Plata) organizada por Sportsfacilities.<br>
-Distancia: 8 kilómetros (única).<br>
-Fecha de primera y única edición: 27/7/2019	(sábado por la mañana).<br>
-Lugar de largada: Plaza Mariano Moreno (frente a la catedral).<br>
-NOTA 1: Fue la primera edición, por lo tanto queda en duda la edición 2021.<br>
-NOTA 2: Junto con la que organiza la UNLP, si es que no hay otra, son las únicas gratuitas pertenecientes a La Plata.</p>
-<p></p>
-<u><h3>AGOSTO</h3></u>
-<p>Quilmes: maratón aniversario. El motivo de la carrera se debe al aniversario de la ciudad de Quilmes.<br>
-Distancias: 3 kilómetros participativos - 10 kilómetros competitivos<br>
-Fecha de última edición: 18/8/2019.<br>
-Lugar de largada de última edición: Avenida Vicente López y Lafinur (a pocos metros de la cancha de Quilmes).<br>
-NOTA 1: En la edición del año 2018, este evento fue realizado el lunes 20 que cayó feriado.<br>
-NOTA 2: En las últimas 3 ediciones realizadas, el recorrido no se repitió.</p>
-<u><h3>SEPTIEMBRE</h3></u>
-<p>Campana: 10k Tenaris. Organizada por el Club de Corredores.<br>
-Distancias: 3 kilómetros participativos - 10 kilómetros competitivos <br>
-Fecha de última edición: 8/9/2019.<br>
-Lugar de largada: Luis Costa entre Marconi y Balcarce</p>
-<p>Lanús Oeste: Lanús corre por Malvinas.<br>
-Distancias: 1,5 y 5 kilómetros participativos - 10 kilómetros competitivos <br>
-Fecha de última edición: 14/9/2019 (sábado por la tarde)<br>
-Lugar de largada: Córdoba y Purita (Parque municipal Eva Perón).<br>
-NOTA 1: Piden donación de alimentos no perecederos como inscripción. Hasta el 2018, se abonaba la misma.</p>
-<p>San Miguel: Maratón Arcángel. El motivo de esta carrera se debe a que en dicho mes están las fiestas patronales.<br>
-Distancias: 2 kilómetros participativos - 9 kilómetros competitivos <br>
-Fecha de última edición: 15/9/2019.<br>
-Lugar de largada: Avenida Presidente Perón y Coronel Charlone (a 2 cuadras de la municipalidad y a 3 de la estación).<br>
-NOTA 1: Piden donación de botellas de plástico limpias y, preferentemente, sin pisar. Se pueden entregar cuando retiran el dorsal o el mismo día de la carrera.<br>
-NOTA 2: Solía hacerse a la semana siguiente del medio maratón de Buenos Aires hasta que le cambiaron la fecha a este último y suele coincidir en la misma fecha con la Carrera Verde.</p>
-<p>Brandsen: Medio maratón. El único gratuito dentro de Buenos Aires y no sé si del país también.<br>
-Distancias: 5, 10 y 21 kilómetros <br>
-Fecha de última edición: 15/9/2019.<br>
-NOTA: Siempre coincide en la misma fecha que la de San Miguel.</p>
-<p>Boulogne Sur Mer: Boulogne corre.<br>
-Distancias: 4 kilómetros participativos - 8 kilómetros competitivos <br>
-Fecha de última edición: 15/9/2019.<br>
-Lugar de largada: Avenida Avelino Rolón y José María Verduga.<br>
-NOTA 1: Hasta el 2017 se venía realizando en noviembre, pero en las 2 últimas ediciones coincidió en la misma fecha que la de San Miguel y Coronel Brandsen.<br>
-NOTA 2: A partir del 2018, la distancia de 8 kilómetros empezó a tener una única vuelta en su recorrido. Previo a eso, eran 2 vueltas de 4 kilómetros.</p>
-<p>Zárate: 10k maratón Terminal Zárate.<br>
-Distancias: 3 kilometros participativos - 10 kilómetros competitivos <br>
-Fecha de última edición: 22/9/2019<br>
-Lugar de largada: Costanera Sur <br>
-NOTA: Piden donación de alimentos no perecederos.</p>
-<p>San Justo: Maratón UNLaM (Universidad Nacional de La Matanza).<br>
-Distancias: 2 y 5 kilómetros participativos - 10 kilómetros competitivos <br>
-Fecha de última edición: 29/9/2019.<br>
-Lugar de largada: Avenida Presidente Perón y Alberto Lartigau.<br>
-NOTA 1: En las últimas 3 ediciones se mantuvo el último domingo del respectivo mes.<br>
-NOTA 2: Piden donación de alimentos no perecederos. Se entregan el día de la carrera.<br>
-NOTA 3: Pésimo estado de las calles, poner mucha atención al pisar.</p>
-<u><h3>OCTUBRE</h3></u>
-<p>La Plata: maratón Delfor de la Canal organizada por la UNLP.<br>
-Distancias: 2 kilómetros correcaminata - 5 kilómetros participativos - 10 kilómetros competitivos <br>
-Fecha de última edición: 6/10/2019 <br>
-Lugar de largada: Calle 12 y Avenida 51. Calles que rodean la plaza Mariano Moreno.<br>
-NOTA 1: Piden donación de alimentos no perecederos y se entregan en el momento de retirar el kit. Actualmente entregan las remeras ese mismo día.<br>
-NOTA 2: Era la única gratuita dentro de La Plata si es que la del festival se hace nuevamente en el 2021.<br>
-NOTA 3: A partir de la edición 2017, el recorrido de 10 kilómetros empezó a tener una única, ya que previo a eso eran 2 vueltas de 5 kilómetros.</p>
-<p>Ciudad Jardín: 3F corre. Se hace dentro del colegio militar, el que está enfrente del aeropuerto de El Palomar. Es una carrera con obstáculos tipo aventura. <br>
-Distancias : 1 kilómetro para chicos - 5 kilómetros participativos - 10 kilómetros competitivos
-Fecha de última edición: 6/10/2019 <br>
-Lugar de largada: Colegio Militar 3 de Febrero. <br>
-NOTA 1: Ídem "NOTA 1" La Plata, excepto por la remera.<br>
-NOTA 2: A pesar de que es en provincia, piden certificado médico para la distancia de 10 kilómetros pese a que no es obligatorio. <br>
-NOTA 3: Fueron intercalando las ediciones en distintos meses, tanto en octubre como en noviembre. Compartió la misma fecha con la de La Plata en 2017 y el año pasado.<br>
-NOTA 4: Las 3 distancias arrancan en diferentes horarios.</p>
-<p>José C.Paz: José C.Paz corre.<br>
-Distancias: 2 kilometros participativos y 9 kilometros competitivos <br>
-Fecha de última edición: 13/10/2019 <br>
-Lugar de largada: Ruta 197 y Muñoz <br>
-NOTA 1: En el 2018, se hizo en el mes de noviembre. <br>
-NOTA 2: Tiene muchas variaciones en cuanto a fecha y mes a realizarse. No está fijo pero se hace anualmente.</p>
-<p>Berazategui: La carrera de Miguel. <br>
-Distancias: 3 kilómetros en caminata - 4 y 7 kilómetros competitivos <br>
-Fecha de última edición: 19/10/2019 (Sábado por la tarde).<br>
-Lugar de largada: Calle 24 y calle 149A (Villa España)</p>
-<p>San Francisco Solano (lado Quilmes): Maratón San Francisco Solano. La suelen hacer el día de la madre. <br>
-Distancias: 1 kilómetro para chicos (Hasta 12 años) - 3 kilómetros juveniles y participativos - 10 kilómetros competitivos <br>
-Fecha de última edición: 20/10/2019. <br>
-Lugar de largada: Calles 844 y 893 <br>
-NOTA: Como San Francisco Solano es una localidad repartida entre los partidos de Quilmes y Almirante Brown, es importante hacer esa aclaración. <br>
-</p>
-<u><h3>NOVIEMBRE</h3></u>
-<p>Haedo: marcha aeróbica, organizada por el instituto Almirante Brown.<br>
-Distancias: 3 kilómetros participativos - 6 kilómetros competitivos (2 vueltas de 3) <br>
-Fecha de última edición: 3/11/2019 <br>
-Lugar de largada: instituto Almirante Brown - Las Bases 151.</p>
-<p>Del Viso: maratón Del Viso. <br>
-Distancias: 200, 300 y 400 metros para chicos - 3 kilómetros participativos y competitivos - 10,5 kilómetros competitivos - Bicicletada<br>
-Fecha de última edición: 3/11/2019. <br>
-Lugar de largada: Estación Del Viso (Calles Independencia y Pedro Arata)</p>
-<u><h3>DICIEMBRE</h3></u>
-<p>Puerto Madero: la carrera de todos. La causa de esta carrera se debe a conmemora el día internacional de las personas con discapacidad.<br>
-Distancias: 2 kilómetros participativos - 5 kilómetros competitivos <br>
-Fecha de última edición: 3/12/2019.<br>
-Lugar de recorrido: Macacha Güemes y Avenida De los Italianos.<br>
-NOTA 1: Las fechas variaron entre el primer sábado o a mediados del correspondiente mes. <br>
-NOTA 2: Todas las ediciones fueron realizadas los sábados por la mañana, algo realmente inusual.</p>
-<p>Castelar: la carrera de Nahuel.<br>
-Distancias: 2 kilómetros participativos - 5 kilómetros competitivos <br>
-Fecha de última edición: 8/12/2019 <br>
-NOTA 1: Piden donación de juguetes nuevos (no usados). Se entregan el día de la carrera.<br>
-NOTA 2: Las últimas ediciones fueron realizadas en el polideportivo Gorki Grana.</p>
+Un detalle importante y que deben recordar es que en todas las carreras de CABA que sean mayores o iguales a 5 kilómetros es obligatorio presentar el certificado médico. <br>
+A continuación, les voy listar algunas de ellas que se hacen anualmente con la fecha de su última edición, zona, distancias y una breve descripción si lo amerita. Aproximadamente rondan esas fechas, lo cual no quiere decir que estén sujeta a modificaciones.<br>
+El mes de febrero es en el único mes donde no hay una carrera fija.<br>
+Quienes visiten esta página, son bienvenidos de aportar alguna carrera que conozcan que no tomé en cuenta de este listado cuando esté habilitado el foro o por medio de la sección de contacto. El calendario está separado por mes y cada uno de ellos en un respectivo PDF. Si alguien desea descargar el cronograma completo, deberá ir a "Todas" que están juntas y enumeradas de manera acumulativa. Comencemos:</p>
 
+<div class="media all place">
+<a href="documentos/Enero.pdf" target="_blank">	<img src="images/enero.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Febrero.pdf" target="_blank">	<img src="images/febrero.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Marzo.pdf" target="_blank">	<img src="images/marzo.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Abril.pdf" target="_blank">	<img src="images/abril.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Mayo.pdf" target="_blank">	<img src="images/mayo.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Junio.pdf" target="_blank">	<img src="images/junio.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Julio.pdf" target="_blank">	<img src="images/julio.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Agosto.pdf" target="_blank">	<img src="images/agosto.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Septiembre.pdf" target="_blank">	<img src="images/septiembre.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Octubre.pdf" target="_blank">	<img src="images/octubre.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Noviembre.pdf" target="_blank">	<img src="images/noviembre.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Diciembre.pdf" target="_blank">	<img src="images/diciembre.jpg" alt="" title="" /></a></div>
+<br>
+<div class="media all place">
+<a href="documentos/Todas.pdf" target="_blank">	<img src="images/todas.jpg" alt="" title="" /></a></div>
+ <br>
 <h4>OTRAS CARRERAS EXTRAS O QUE QUEDARON EN EL OLVIDO</h4>
 <p>Estas carreras no forman parte del cronograma anual. Los motivos van a estar aclarados y además de eso, no se detallarán en profundidad las que dejaron de hacerse:</p>
 <p>Cañuelas: la última edición fue el 18/02/2018. El año pasado no se realizó y tampoco en este. Por ende, habría que dejarla de tener en cuenta hasta nuevo aviso.<br>
@@ -236,8 +120,10 @@ NOTA: Piden donación de alimentos no perecederos. No entregan el kit a los part
 Distancia: 5 kilómetros (Única)
 Fecha de última edición: 14/09/2019 (Sábado)<br>
 Lugar de recorrido: Avenida Presidente Perón y Ramón Carrillo.</p>
-<p>Florencio Varela: Maratón barrio San Jorge: tuvo distintas fechas y meses de realización.<br></p>
 </p>
+<p>Florencio Varela: Maratón barrio San Jorge: tuvo distintas fechas y meses de realización.<br></p>
+<hr>
+Si desean inscribirse en algunas de estas carreras, accedan a la página de <a href="Inscripciones.html">inscripciones</a>. En el menú desplegable también se encuentra la misma.
 						</div>
 					</div>
 				</div>
@@ -247,14 +133,14 @@ Lugar de recorrido: Avenida Presidente Perón y Ramón Carrillo.</p>
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.outlook.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/iem892" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/ivan.e.mino" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/5491162767459" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="https://www.patreon.com" target="_blank" class="icon fa-money"><span class="label">Patreon</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Programación Front End 2020. Todos los derechos reservados.
 				</div>
 			</footer>
 
