--- a/Carrera de calle.html
+++ b/Carrera de calle.html
@@ -17,17 +17,27 @@
 			<header id="header">
 				<div class="logo">Carreras <span>de calle</span></a></div>
 
-				<a href="#menu">Menu</a>
+				<a href="#menu">Menú</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="Calendario.html">Fechas tentativas de carreras</a></li>
+					<li><a href="Carrera de trail.html">Carrera de trail</a></li>
 				</ul>
 			</nav>
 
-
+<!-- One -->
+			<section id="One" class="wrapper style3">
+				<div class="inner">
+					<header class="align-center">
+						<p>Definición</p>
+						<marquee><h2>¿Qué es una carrera de calle?</h2></marquee>
+					</header>
+				</div>
+			</section>
 
 		<!-- Two -->
 		 	<section id="two" class="wrapper style2">
@@ -39,14 +49,46 @@
 								<h2>Carreras de calle</h2>
 							</header>
 <p>¿Qué es una carrera de calle?</p>
-<p>La Asociación Internacional de las Federaciones de Atletismo define a las carreras callejeras como las disputadas en circuitos de calles, avenidas y carreteras con distancias oficiales que rondan entre los 5 y 100 km. En la sección VIII, art. 240 del Reglamento de Competición 2018-2019 sobre Carreras de Carretera, la IAAF establece que las distancias estándares son de 5, 10, 15, 20 km, Media Maratón, 25 km, Maratón, 100 km y relevos en carretera (IAAF, 2017).</p>
-<p>La popularización del running se produjo en los años 70 en Estados Unidos cuando se celebró la primera maratón popular de Nueva York, con 127 participantes. Actualmente la cifra llega a 50.000 corredores (CinfaSalud, 2017).</p>
-<p>Hijós (2017) refiere que en la Ciudad de Buenos Aires en 1903 se corrió la primera maratón en el Jardín Florida. Participaron 30 atletas. Desde entonces, siguieron algunas iniciativas e, incluso, desde 1934 y por 32 años se corrió la Maratón de los Barrios organizada por la revista El Gráfico. En 1913 se fundó la Federación Internacional de Atletismo Amateur (actualmente la Asociación Internacional de Federaciones de Atletismo–IAAF),
+<p>La Asociación Internacional de las Federaciones de Atletismo define a las carreras callejeras como las disputadas en circuitos de calles, avenidas y carreteras con distancias oficiales que rondan entre los 5 y 100 km. En la sección VIII, art. 240 del Reglamento de Competición 2018-2019 sobre Carreras de Carretera, la IAAF establece que las distancias estándares son de 5, 10, 15, 20 km, Media Maratón, 25 km, Maratón, 100 km y relevos en carretera (IAAF, 2017).<br>
+La popularización del running se produjo en los años 70 en Estados Unidos cuando se celebró la primera maratón popular de Nueva York, con 127 participantes. Actualmente la cifra llega a 50.000 corredores (CinfaSalud, 2017).<br>
+Hijós (2017) refiere que en la Ciudad de Buenos Aires en 1903 se corrió la primera maratón en el Jardín Florida. Participaron 30 atletas. Desde entonces, siguieron algunas iniciativas e, incluso, desde 1934 y por 32 años se corrió la Maratón de los Barrios organizada por la revista El Gráfico. En 1913 se fundó la Federación Internacional de Atletismo Amateur (actualmente la Asociación Internacional de Federaciones de Atletismo–IAAF),
 	que es el organismo rector de las competencias de atletismo a nivel mundial, encargado de establecer las reglas y de otorgar la oficialidad a las marcas obtenidas por los atletas. El maratón no tuvo categoría femenina hasta 1984, pero hoy las actividades deportivas demuestran que, cuando las potencialidades físicas son entrenadas, las diferencias se traducen en pocos metros en disciplinas del atletismo. Hace más de una década atrás,
-	solo el 5% de las mujeres corría, no más del 20 o 25 % de los inscriptos en carreras de resistencia, mientras que hoy llegaría a ser un 49 % (Hijós, 2017). Según el estudio CinfaSalud realizado en 2017 en España, basándose en la Encuesta de Hábitos Deportivos del Ministerio de Sanidad, Servicios Sociales e Igualdad, un 30,4 % de los españoles practican el running y, de estos, un 37 % son mujeres. Esto es un dato positivo en una sociedad mayormente sedentaria, ya que, de acuerdo a datos del Eurobarómetro sobre deporte y educación física (UE, 2014), el 59 % de los europeos no realizaba ejercicio ni practicaba deporte alguno habitualmente.</p>
-<p>En el atletismo, las carreras están compuestas por cinco categorías: carreras de velocidad, medio fondo, fondo, obstáculos, y relevos. Pero también incluye eventos en pista y campo, carreras de ruta, cross country, montaña y otras, en las cuales se busca desafiar al rival, lograr triunfos y superarse a uno mismo (IAAF, 2017).</p>
-<p>Las carreras de medio fondo se realizan en distancias intermedias (de 800 a 3.000 m). Las carreras por encima de 3.000 m se consideran pruebas de larga distancia o de fondo, y son muy populares en Argentina, donde se celebran con frecuencia carreras de 5 km y 10 km o aun de 15, 21, 42 y hasta 100 km, llamadas “ultramaratón”. Las competiciones populares de fondo son las manifestaciones deportivas de carácter popular extendidas mundialmente, que cuentan con un gran número de participantes de todas las clases y niveles sociales. Estas carreras constituyen verdaderos eventos de magnitud, abarcando distancias de varios kilómetros, y suelen desarrollarse en entornos urbanos, recorriendo las principales avenidas de la ciudad o pueblos donde se organizan (Salguero y Martos, 2011).</p>
-<p>Debido a que los kilómetros recorridos por cada tipo de carrera son de amplio rango, los modelos de entrenamiento, sus requerimientos y demandas físicas son muy diferentes según la distancia que se deba correr. Sin embargo, el lactato y el VO2 son factores comunes, junto a la adquisición de capacidades como resistencia, velocidad, flexibilidad, fuerza y potencia (Giorgi Laverde et al., 2011). Los corredores de media y larga distancia tienen elevada capacidad aeróbica y un estilo de desplazamiento energéticamente económico, dado que estas carreras son deportes de resistencia. Los factores que contribuyen al éxito en estas pruebas son la economía de movimientos, el dominio táctico y la velocidad máxima en el final de la prueba (Onzari, 2014).</p>
+	solo el 5% de las mujeres corría, no más del 20 o 25 % de los inscriptos en carreras de resistencia, mientras que hoy llegaría a ser un 49 % (Hijós, 2017). Según el estudio CinfaSalud realizado en 2017 en España, basándose en la Encuesta de Hábitos Deportivos del Ministerio de Sanidad, Servicios Sociales e Igualdad, un 30,4 % de los españoles practican el running y, de estos, un 37 % son mujeres. Esto es un dato positivo en una sociedad mayormente sedentaria, ya que, de acuerdo a datos del Eurobarómetro sobre deporte y educación física (UE, 2014), el 59 % de los europeos no realizaba ejercicio ni practicaba deporte alguno habitualmente.<br>
+En el atletismo, las carreras están compuestas por cinco categorías: carreras de velocidad, medio fondo, fondo, obstáculos, y relevos. Pero también incluye eventos en pista y campo, carreras de ruta, cross country, montaña y otras, en las cuales se busca desafiar al rival, lograr triunfos y superarse a uno mismo (IAAF, 2017).<br>
+Las carreras de medio fondo se realizan en distancias intermedias (de 800 a 3.000 m). Las carreras por encima de 3.000 m se consideran pruebas de larga distancia o de fondo, y son muy populares en Argentina, donde se celebran con frecuencia carreras de 5 km y 10 km o aun de 15, 21, 42 y hasta 100 km, llamadas “ultramaratón”. Las competiciones populares de fondo son las manifestaciones deportivas de carácter popular extendidas mundialmente, que cuentan con un gran número de participantes de todas las clases y niveles sociales. Estas carreras constituyen verdaderos eventos de magnitud, abarcando distancias de varios kilómetros, y suelen desarrollarse en entornos urbanos, recorriendo las principales avenidas de la ciudad o pueblos donde se organizan (Salguero y Martos, 2011).<br>
+Debido a que los kilómetros recorridos por cada tipo de carrera son de amplio rango, los modelos de entrenamiento, sus requerimientos y demandas físicas son muy diferentes según la distancia que se deba correr. Sin embargo, el lactato y el VO2 son factores comunes, junto a la adquisición de capacidades como resistencia, velocidad, flexibilidad, fuerza y potencia (Giorgi Laverde et al., 2011). Los corredores de media y larga distancia tienen elevada capacidad aeróbica y un estilo de desplazamiento energéticamente económico, dado que estas carreras son deportes de resistencia. Los factores que contribuyen al éxito en estas pruebas son la economía de movimientos, el dominio táctico y la velocidad máxima en el final de la prueba (Onzari, 2014).<br>
+Más abajo, van a encontrar información que tiene que ver con carreras de calle. Deben hacer clic en las imágenes para ser redirigidos.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="three" class="wrapper style2">
+				<div class="inner">
+					<header class="align-center">
+						<p class="special">Información más detallada</p>
+						<h2><p>Enlaces relacionados</p></h2>
+					</header>
+					<div class="gallery">
+						<div>
+							<div class="image fit">
+								<a href="http://runningytrailrunning.com/#!/-inicio/" target="_blank"><img src="images/running y trail running.png" alt="" /></a>
+							</div>
+						</div>
+						<div>
+							<div class="image fit">
+								<a href="https://2142runners.com/" target="_blank"><img src="images/21.42.png" alt="" /></a>
+							</div>
+						</div>
+						<div>
+							<div class="image fit">
+								<a href="https://www.atletas.info/" target="_blank"><img src="images/Atletasinfo.jpg" alt="" /></a>
+							</div>
+						</div>
+						<div>
+							<div class="image fit">
+								<a href="https://runfitners.com/" target="_blank"><img src="images/Runfitners.png" alt="" /></a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -56,14 +98,14 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.outlook.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/iem892" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/ivan.e.mino" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/5491162767459" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="https://www.patreon.com" target="_blank" class="icon fa-money"><span class="label">Patreon</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Programación Front End 2020. Todos los derechos reservados.
 				</div>
 			</footer>
 
