--- a/Carrera de trail.html
+++ b/Carrera de trail.html
@@ -17,19 +17,27 @@
 			<header id="header">
 				<div class="logo">Carreras <span>de calle</span></a></div>
 
-				<a href="#menu">Menu</a>
+				<a href="#menu">Menú</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="Calendario.html">Fechas tentativas de carreras</a></li>
+					<li><a href="Carrera de calle.html">Carrera de calle</a></li>
 				</ul>
 			</nav>
 
 		<!-- One -->
-
+		<section id="One" class="wrapper style3">
+			<div class="inner">
+				<header class="align-center">
+					<p>Definición</p>
+					<marquee><h2>¿Qué es una carrera de trail o montaña?</h2></marquee>
+				</header>
+			</div>
+		</section>
 
 		<!-- Two -->
 		 	<section id="two" class="wrapper style2">
@@ -42,12 +50,44 @@
 							</header>
 <p>El trail running se define, simplemente, como la práctica de la carrera a pie en plena naturaleza. Es un deporte que se practica fuera de pista. Además, es muy completo y, sin duda, requiere buenas piernas, pero también un buen tren superior. Por último, exige concentración y prudencia.</p>
 <h3>EL TRAIL RUNNING CONLLEVA ASCENSOS Y DESCENSOS</h3>
-<p>El trail running solamente se practica en montaña, pero los relieves accidentados y el desnivel positivo forman parte de este deporte. Además, no nos limitamos a correr por senderos.</p>
-<p>En los ascensos, se alterna la marcha con la carrera a pie. En ocasiones se utilizan bastones o se apoyan las manos en las piernas en los tramos más empinados.</p>
-<p>En los descensos, hay que tener cuidado con los apoyos e intentar que el antepié amortigüe los impactos. Se utilizan mucho los brazos para mantener un buen equilibrio.</p>
+<p>El trail running solamente se practica en montaña, pero los relieves accidentados y el desnivel positivo forman parte de este deporte. Además, no nos limitamos a correr por senderos.<br>
+En los ascensos, se alterna la marcha con la carrera a pie. En ocasiones se utilizan bastones o se apoyan las manos en las piernas en los tramos más empinados.<br>
+En los descensos, hay que tener cuidado con los apoyos e intentar que el antepié amortigüe los impactos. Se utilizan mucho los brazos para mantener un buen equilibrio.</p>
 <h3>¿POR QUÉ EL TRAIL RUNNING ES DISTINTO DE LA CARRERA SOBRE ASFALTO?</h3>
 <p>A diferencia de la carrera por carretera, en el trail running el terreno varía constantemente. Se corre por senderos, piedras, barro, hierba y hasta por la nieve en un trail blanco. Incluso un trail urbano favorece la diversidad del recorrido.</p>
+<p>Para más información, hacer clic en las imágenes de abajo que son links que los llevaran a otras páginas externas.</p>
 						</div>
+					</div>
+				</div>
+			</section>
+			<section id="three" class="wrapper style2">
+				<div class="inner">
+					<header class="align-center">
+						<p class="special">Información más detallada</p>
+						<h2><p>Enlaces relacionados</p></h2>
+					</header>
+					<div class="gallery">
+						<div>
+							<div class="image fit">
+								<a href="http://runningytrailrunning.com/#!/-inicio/" target="_blank"><img src="images/running y trail running.png" alt="" /></a>
+							</div>
+						</div>
+						<div>
+							<div class="image fit">
+								<a href="https://carrerasdemontana.com/" target="_blank"><img src="images/Montaña.jpg" alt="" /></a>
+							</div>
+						</div>
+						<div>
+							<div class="image fit">
+								<a href="https://www.trailrunning.ar/" target="_blank"><img src="images/TRA.png" alt="" /></a>
+							</div>
+						</div>
+						<div>
+							<div class="image fit">
+								<a href="http://infotrailmedia.com/nuevo//" target="_blank"><img src="images/infotrail.png" alt="" /></a>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</section>
@@ -56,14 +96,14 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.outlook.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/iem892" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/ivan.e.mino" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/5491162767459" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="https://www.patreon.com" target="_blank" class="icon fa-money"><span class="label">Patreon</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Programación Front End 2020. Todos los derechos reservados.
 				</div>
 			</footer>
 
