--- a/Mi blog.html
+++ b/Mi blog.html
@@ -17,18 +17,28 @@
 			<header id="header">
 				<div class="logo">Carreras <span>de calle</span></a></div>
 
-				<a href="#menu">Menu</a>
+				<a href="#menu">Menú</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index.html">Inicio</a></li>
+					<li><a href="Calendario.html">Calendario anual de carreras gratuitas</a></li>
+					<li><a href="Carrera de calle.html">Carrera de calle</a></li>
+					<li><a href="Carrera de trail.html">Carrera de trail</a></li>
 				</ul>
 			</nav>
 
 		<!-- One -->
-
+		<section id="One" class="wrapper style3">
+			<div class="inner">
+				<header class="align-center">
+					<p>Mi perfil</p>
+					<marquee><h2>¿Quién soy?</h2></marquee>
+				</header>
+			</div>
+		</section>
 
 		<!-- Two -->
 		 	<section id="two" class="wrapper style2">
@@ -39,14 +49,23 @@
 								<p>Perfil mío</p>
 								<h2>Mi presentación</h2>
 							</header>
-<p>¡Hola! Les agradezco su visita a mi sitio web. Mi nombre es Iván Miño, tengo 31 años, soy soltero y estudio licenciatura en gestión de tecnología en la UNLaM. Me quedan 3 materias para poder recibirme.<br>
-Me gusta practicar deportes, pero el que más me gusta es el de correr. Comencé a practicarlo a fines del 2012 por exceso de peso. Me vino bien tanto física y mentalmente.<br>
-A fines del 2014, comencé a participar en carreras de calle que, mayormente, se las conoce erroneámente como maratones. Tengo más de 100 carreras hechas, en las cuales 2 son maratones y 8 son medio maratones. El resto se dividen, en su mayoría, en distancias de 5, 8 y 10 kilómetros. Mi primera carrera fue en la localidad de San Justo, partido de la Matanza. La UNLaM (justamente donde soy alumno) organizó dicho evento.<br>
+<p>¡Hola! Les agradezco su visita a mi sitio web. Mi nombre es Iván Miño, tengo 31 años y estudio licenciatura en gestión de tecnología en la UNLaM. Me quedan 3 materias para poder recibirme.<br>
+Me gusta practicar deportes y uno de ellos me apasiona que es el de correr. Comencé a practicarlo a fines del 2012 por exceso de peso, viniéndome bien tanto física como mentalmente.<br>
+A fines del 2014, comencé a participar en carreras de calle que, mayormente, se las conoce erróneamente como maratones. Tengo más de 100 carreras hechas, de las cuales 2 son maratones y 8 son medio maratones. El resto se dividen, en su mayoría, en distancias de 5, 8 y 10 kilómetros. Mi primera carrera fue en la localidad de San Justo,
+partido de la Matanza, compitiendo en la distancia de 10 kilómetros. La UNLaM (justamente donde soy alumno) organizó dicho evento con los respectivos patrocionadores.<br>
 En el año 2016 logré convertirme en maratonista que si bien nunca fue algo que me propuse, con el paso del tiempo fui cambiando esa mentalidad hasta animarme y correr mis primeros 42 kilómetros.<br>
-Actualmente, me encuentro inactivo debido a la pandemia. Solo espero que regrese todo a la normalidad para volver a las actividades nuevamente.</p>
+Actualmente, me encuentro inactivo debido a la pandemia. Solo espero que regrese todo a la normalidad para volver a las actividades nuevamente. <br>
+Este soy yo y es la foto de la última carrera en la que participé que es la de Ituzaingó que fue realizada el 8 de marzo de este año.</p>
+<img src="images/Ituzaingó.jpg" alt="">
+<br>
 <h3>¿CON QUÉ FIN FUE CREADA ESTA PÁGINA?</h3>
-<p>El propósito de esta página es poder brindarles información y alguna novedad sobre las carreras de calle en el AMBA. He visto que muchos corredores desconocen los calendarios anuales y otros que desconocen las carreras que se realizan en distintas zonas. Mi objetivo es poder orientarlos, difundir las gratuitas y reducir sus tiempos de búsqueda.<br>
-En el mediano plazo tengo las intenciones de expandir la información con todas las carreras gratuitas de la provincia de Buenos Aires y en el largo plazo, hacer un listado con todas las gratuitas del país. Con esto último, tendré que sumar colaboradores.<p>
+<p>El propósito de esta página es poder brindarles información y alguna novedad sobre las carreras de calle priorizando las del AMBA y más aún las gratuitas. He visto que muchos corredores desconocen las carreras que se realizan en distintas zonas. Mi objetivo es poder orientarlos, difundir las mismas y reducir sus tiempos de búsqueda.<br>
+En el mediano plazo tengo las intenciones de expandir la información con todas las carreras de la provincia de Buenos Aires y en el largo plazo, hacer un listado con todas las del país, independientemente de si son gratuitas, a beneficio o que tengan costo. Para esto último, mi idea está en sumar colaboradores para poder facilitar la información.<p>
+<p>Revisen las otras secciones de la página para que investiguen lo que pueda serles de utilidad.</p>
+
+
+
+
 						</div>
 					</div>
 				</div>
@@ -56,14 +75,14 @@ En el mediano plazo tengo las intenciones de expandir la información con todas 
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.outlook.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/iem892" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/ivan.e.mino" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/5491162767459" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="https://www.patreon.com" target="_blank" class="icon fa-money"><span class="label">Patreon</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Programación Front End 2020. Todos los derechos reservados.
 				</div>
 			</footer>
 
