--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="logo">Carreras <span>de calle</span></a></div>
-				<a href="#menu">Menu</a>
+				<a href="#menu">Menú</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Inicio</a></li>
+					<li><a href="#">Inicio</a></li>
 					<li><a href="Mi blog.html">Mi presentación</a></li>
 					<li><a href="Carrera de calle.html">Carrera de calle</a></li>
 					<li><a href="Carrera de trail.html">Carrera de trail</a></li>
-					<li><a href="Calendario.html">Fechas tentativas de carreras</a></li>
+					<li><a href="Inscripciones.html">Inscripciones</a></li>
 					<li><a href="Novedades.html">Noticias</a></li>
 					<li><a href="Contacto.html">Contacto</a></li>
 
@@ -58,7 +58,7 @@
 					<img src="images/Kipchoge.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Definición</p>
+							<p>Tipo de carreras</p>
 							<h2>Carreras de calle</h2>
 						</header>
 					</div>
@@ -67,7 +67,7 @@
 					<img src="images/Trail running.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Definición</p>
+							<p>Tipo de carreras</p>
 							<h2>Carreras de trail</h2>
 						</header>
 					</div>
@@ -116,7 +116,7 @@
 										<p>En construcción</p>
 										<h2>Opiniones y sugerencias</h2>
 									</header>
-									<p>Con el motivo de querer hacer crecer la página, próximamente estaré abriendo un especio de foro donde podré interactuar con las personas que visiten la página y estaré abierto a escuchar propuestas para mejorarla.<br>
+									<p>Con el fin de querer hacer crecer la página, próximamente estaré abriendo un especie de foro donde podré interactuar con las personas que visiten la página y a disposición de escuchar propuestas para mejorarla.<br>
 										Se agradecerán los aportes brindados para ir ampliando los contenidos de la página y de sumar colaboradores que contribuyan al crecimiento de la misma.
 									</p>
 									<footer class="align-center">
@@ -134,7 +134,7 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Otras informaciones</p>
+						<p>Organizadores de carreras</p>
 						<h2>Pueden visitar los links de abajo. Hacer clic en imágenes</h2>
 					</header>
 				</div>
@@ -145,7 +145,7 @@
 				<div class="inner">
 					<header class="align-center">
 						<p class="special">Información de otros sitios web</p>
-						<h2>Enlaces externos</h2>
+						<h2><p>Enlaces de organizadores de carreras de calle</p></h2>
 					</header>
 					<div class="gallery">
 						<div>
@@ -155,36 +155,47 @@
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="http://www.sportsfacilities.com.ar" target="_blank"><img src="images/sportsfacilities.jpg" alt="" /></a>
+								<a href="http://www.sportsfacilities.com.ar" target="_blank"><img src="images/Sportsfacilities.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="https://www.atletas.info/" target="_blank"><img src="images/Atletasinfo.jpg" alt="" /></a>
+								<a href="https://eventosrunners.com.ar/" target="_blank"><img src="images/eventos runner.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="https://runfitners.com/" target="_blank"><img src="images/Runfitners.png" alt="" /></a>
+								<a href="https://www.maratondebuenosaires.com/" target="_blank"><img src="images/ñandú.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
 
+			<section id="four" class="wrapper style2">
+				<div class="inner">
+					<header class="align-center">
+<p class="sepecial"></>
+						 <img src="images/advertencia.png" alt="">
+						 <h2><p>¡ADVERTENCIA!</p></h2>
+						<h2><p>Este sitio web es solo de carácter informativo. No organiza ningún tipo de carreras ni patrocina las mismas, solo las publica y difunde.<br>
+						Ante cualquier inconveniente que esté relacionado con inscripciones, deberán resolverlo con sus respectivos organizadores.</p></h2>
+					</header>
+				</div>
+			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.gmail.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/iem892" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/ivan.e.mino" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/5491162767459" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="https://www.patreon.com" target="_blank" class="icon fa-money"><span class="label">Patreon</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Programación Front End 2020. Todos los derechos reservados.
 				</div>
 			</footer>
 
