--- a/Contacto.html
+++ b/Contacto.html
@@ -17,17 +17,21 @@
 			<header id="header">
 				<div class="logo">Carreras <span>de calle</span></a></div>
 
-				<a href="#menu">Menu</a>
+				<a href="index.html">Menú</a>
 			</header>
 
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-				</ul>
-			</nav>
+	
 
-
+<!-- One -->
+			<section id="One" class="wrapper style3">
+				<div class="inner">
+					<header class="align-center">
+						<p>Contactarme</p>
+						<marquee><h2>Información de contacto</h2></marquee>
+					</header>
+				</div>
+			</section>
 
 		<!-- Two -->
 		 	<section id="two" class="wrapper style2">
@@ -39,11 +43,11 @@
 								<h2>Contacto</h2>
 							</header>
 <p>Si quieren contactarme, pueden realizarlo de la siguiente manera:</p>
-<p>Correo electrónico Outlook: xxxxxx@hotmail.com</p>
-<p>Correo electrónico Gmail: xxxxxx@gmail.com</p>
-<p>Celular: xxx-xx-xxxx-xxxx</p>
+<p>Correo electrónico Outlook: iem_892@hotmail.com</p>
+<p>Correo electrónico Gmail: ivanem1989@gmail.com</p>
 <p></p>
 <h3>Contacto</h3>
+
 <form action="#" method="post">
 	<div class="field half first">
 		<label for="name">Nombre</label>
@@ -67,6 +71,7 @@
 					</div>
 				</div>
 			</section>
+
 <section id="three" class="wrapper style2">
 			<div class="column">
 												<
@@ -77,14 +82,14 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.outlook.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://www.facebook.com/iem892" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/ivan.e.mino" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://wa.me/5491162767459" target="_blank" class="icon fa-whatsapp"><span class="label">WhatsApp</span></a></li>
+						<li><a href="https://www.patreon.com" target="_blank" class="icon fa-money"><span class="label">Patreon</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Programación Front End 2020. Todos los derechos reservados.
 				</div>
 			</footer>
 
