--- a/En construcción.html
+++ b/En construcción.html
@@ -45,7 +45,7 @@
 								<h2>En construcción</h2>
 							</header>
 <p>Este sitio será utilizado a futuro para interactuar con los usuarios de manera más directa, complementando la mensajería por correo. <br>
-Volver a <a href="index.html">inicio</a></p>
+Por favor, volver a <a href="index.html">inicio</a> para recorrer las otras páginas ya que el mismo está en mantenimiento.</p>
 <img src="images/Sitio en construcción.jpg" alt="">
 						</div>
 					</div>
@@ -53,19 +53,7 @@ Volver a <a href="index.html">inicio</a></p>
 			</section>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="https://www.twitter.com" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.outlook.com" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. All rights reserved.
-				</div>
-			</footer>
+		
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
